<resources>
    <string name="app_name">Stocks</string>
    <string name="searchBar">searchBar</string>
    <string name="imageViewBack">imageViewBack</string>
    <string name="fetchingdata">Fetching Data</string>
    <string name="ticker">ticker</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="changeprice">changeprice</string>
    <string name="Portfolio">Portfolio</string>
    <string name="info">info</string>
    <string name="stats">Stats</string>
    <string name="about">About</string>
    <string name="description">description</string>
    <string name="Show">Show more..</string>
    <string name="news">News</string>
    <string name="card_res">card_res</string>
    <string name="card_time">card_time</string>
    <string name="todo">TODO</string>
    <string name="card_sum">sum</string>
    <string name="dialogImage">dialogImage</string>
    <string name="textViewDialog">textViewDialog</string>
    <string name="dialogTwitter">dialogTwitter</string>
    <string name="dialogChrome">dialogChrome</string>
    <string name="nulla"> </string>
    <string name="stats_textview">stats_textview</string>
    <string name="resfirst">resfirst</string>
    <string name="timefirst">timefirst</string>
    <string name="titlefirst">titlefirst</string>
    <string name="todo2">TODO2</string>
    <string name="todo3">3TODO</string>
    <string name="FAVORITES">  FAVORITES</string>
    <string name="PORTFOLIO">  PORTFOLIO</string>
    <string name="P_ticker">P_ticker</string>
    <string name="P_name">P_name</string>
    <string name="P_price">P_price</string>
    <string name="P_change">P_change</string>
    <string name="todo5">TODO5</string>
    <string name="imageView_Go_To_Detail">imageView_Go_To_Detail</string>
    <string name="imageButton_To_Detail">imageButton_To_Detail</string>
    <string name="Button_buy">TRADE</string>
    <string name="time">time</string>
    <string name="string_time">string_time</string>
    <string name="bottom">Powered by tiingo</string>
    <string name="portfolioInformation2">portfolioInformation2</string>
    <string name="D1_Title">D1_Title</string>
    <string name="shares">shares</string>
    <string name="D1_info">D1_info</string>
    <string name="D1_buy_info">D1_buy_info</string>
    <string name="button_buy">Buy</string>
    <string name="button_sell">SELL</string>
    <string name="_0">0</string>
    <string name="Net_Worth">Net Worth</string>
    <string name="Worth_Number">Worth_Number</string>
    <string name="Congratulations">Congratulations!</string>
    <string name="con_text1">con_text1</string>
    <string name="Done">DONE</string>
    <string name="todo_c">TODO_c</string>
    <string name="FAVORITES2">FAVORITES</string>
    <string name="PORTFOLIO2">PORTFOLIO</string>
</resources>